@@ -78,6 +78,6 @@ Rpg::LoggerOutputFile::logHeader(const LogHeader* lh)
   mFile << "Logger started for '" << lh->program_name 
 	<< " v"<< lh->program_version<< "'" << endl
 	<< "Compiled " << lh->compil_date << " at " 
-	<< lh->compil_time << endl;
-
+	<< lh->compil_time << endl
+	<< "Executed " << lh->exec_date << " at " << lh->exec_time << endl;
 }
